# WasFisherGreat

./: .gitignore  1-binary_outputs-random-10.npy  1-binary_outputs-random-100.npy  1-embeddings-random-full-prompt-nomic-100.npy  1-embeddings-random-only-context-nomic-100.npy  1-labels-random-100.npy  1-outputs-random-10.npy  1-outputs-random-100.npy  1-probabilities-random-10.npy  1-probabilities-random-100.npy  experiments.py  llama-full-mse-pca.npy  llama-full-rel-mse-pca.npy  llama-only-mse-pca.npy  llama-only-rel-mse-pca.npy  nomic-full-mse-pca.npy  nomic-full-rel-mse-pca.npy  nomic-only-mse-pca.npy  nomic-only-rel-mse-pca.npy  pca_plots.py  plots.py  pyproject.toml  randomcontext.py  randomcontexts.xlsx  scree_plots.py
