[tool.poetry]
name = "wasfishergreat"
version = "0.1.0"
description = ""
authors = ["edlwang <ewang43@jhu.edu>"]
package-mode=false

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.5"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
scipy = "^1.13.1"
tqdm = "^4.66.4"
langchain-community = "^0.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
