[tool.poetry]
name = "wasfishergreat"
version = "0.1.0"
description = ""
authors = ["edlwang <ewang43@jhu.edu>"]
package-mode=false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
langchain = "^0.2.5"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
scipy = "1.12.0"
tqdm = "^4.66.4"
langchain-community = "^0.2.5"
llama-cpp-python = "0.2.55"
openpyxl = "^3.1.4"
plotly = "^5.22.0"
langchain-nomic = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
